Simplify rendering of sparql cells (refactoring)
Fixes issues where certain filter dialog entries would look different from rendered cell in table